fix padding and spacing

--- a/src/calendarBookingForm/Components/Variant.scss
+++ b/src/calendarBookingForm/Components/Variant.scss
@@ -1,10 +1,10 @@
-.Variant-Grid {
+.Variant-Grid, .VariantListTotal-Grid {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     align-items: center;
     grid-template-areas: 
     "box1 box2 box3";
-    height: 3.5rem;
+    height: 4rem;
 }
 .Variant-Age, .Variant-Price {
     display: flex;
@@ -23,6 +23,7 @@
     text-align: center;
     width: 6rem;
     font-size: 15px;
+    height:2rem;
     &:hover{
         cursor: pointer;
     }
